feat: add private registry credentials

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -53,4 +53,6 @@ spec:
           #   httpGet:
           #     path: /live
           #     port: {{ $component.targetPort }}
+      imagePullSecrets:
+        - name: registry
 {{- end }}
