--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: cp-system-demo
+name: pak-system-demo
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
